refactor:select all tweets in time order